@@ -13,7 +13,8 @@ public class Alterar {
 
     public static void main(String[] args) {
         manager = Util.conectarBanco();
-        System.out.println("Alteracao: remover o ultimo servico do pet Rex");
+
+        System.out.println("Alteração: remover e adicionar relacionamento de um Pet");
 
         Query q = manager.query();
         q.constrain(Pet.class);
@@ -21,18 +22,25 @@ public class Alterar {
         List<Pet> resultado = q.execute();
 
         if (!resultado.isEmpty()) {
-            Pet rex = resultado.getFirst();
+            Pet rex = resultado.get(0);
 
-            if (rex.getServicos().isEmpty()) {
-                System.out.println("Pet não possui serviços para remover");
-            } else {
+            if (!rex.getServicos().isEmpty()) {
                 Servico removido = rex.getServicos().removeLast();
+                manager.delete(removido);
                 manager.store(rex);
-                manager.commit();
-                System.out.println("Último serviço removido: " + removido.getTipo());
+                System.out.println("Último serviço removido: " + removido.getTipo() + " em " + removido.getDatahora());
+            } else {
+                System.out.println("Pet não possui serviços para remover.");
             }
+
+            Servico novoServico = new Servico("20/05/2025 14:00", rex, "vacina");
+            manager.store(novoServico);
+            manager.store(rex);
+            System.out.println("Novo serviço adicionado: " + novoServico.getTipo() + " em " + novoServico.getDatahora());
+
+            manager.commit();
         } else {
-            System.out.println("Pet não encontrado");
+            System.out.println("Pet não encontrado.");
         }
 
         Util.desconectar();
